add form input and submit button

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TITLE</title>
+  <title>Currency Exchange Rate</title>
 </head>
 <body>
+  <div class="container">
+    <h1>Get currency conversion rate!</h1>
+    <label for="currency">Enter amount:</label>
+    <input id="currency" type="text">
+    <button class="button" id="currencyRate">Convert Currency</button>
+    <div class="show-currency"></div>
+    <div class="show-errors"></div>
+  </div>
 </body>
 </html>
