add currency drop down

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,13 @@
 <body>
   <div class="container">
     <h1>Get currency conversion rate!</h1>
-    <label for="currency">Enter amount:</label>
-    <input id="currency" type="text">
+    <label for="currencyAmount">Enter amount:</label>
+    <input id="currencyAmount" type="text">
     <button class="button" id="currencyRate">Convert Currency</button>
+
+    <label for="currencyType">Choose a currency:</label>
+    <select name="currencyType" id="currencyType">
+    </select>
     <div class="show-currency"></div>
     <div class="show-errors"></div>
   </div>
