add second select promt

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,15 @@
 <body>
   <div class="container">
     <h1>Get currency conversion rate!</h1>
-    <label for="currencyAmount">Enter amount:</label>
+    <label for="currencyAmount">Convert:</label>
     <input id="currencyAmount" type="text">
-    
-    <label for="currencyType">Choose a currency:</label>
-    <select name="currencyType" id="currencyType">
+
+    <label for="fromCurrencyType">From:</label>
+    <select name="fromCurrencyType" id="fromCurrencyType">
+    </select>
+
+    <label for="toCurrencyType">To:</label>
+    <select name="toCurrencyType" id="toCurrencyType">
     </select>
     <button class="button" id="currencyRate">Convert Currency</button>
 
