remove flag-service--No CORS

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <button class="button" id="currencyRate">Convert Currency</button>
 
     <div class="show-currency"></div>
+    <div class="show-flag"></div>
     <div class="show-errors"></div>
   </div>
 </body>
