--- a/src/index.html
+++ b/src/index.html
@@ -6,23 +6,25 @@
   <title>Currency Exchange Rate</title>
 </head>
 <body>
-  <div class="container">
-    <h1>Get currency conversion rate!</h1>
-    <label for="currencyAmount">Convert:</label>
-    <input id="currencyAmount" type="text">
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Get currency conversion rate!</h1>
+      <label for="currencyAmount">Convert:</label>
+      <input id="currencyAmount" type="number">
 
-    <label for="fromCurrencyType">From:</label>
-    <select name="fromCurrencyType" id="fromCurrencyType">
-    </select>
+      <label for="fromCurrencyType">From:</label>
+      <select name="fromCurrencyType" id="fromCurrencyType">
+      </select>
 
-    <label for="toCurrencyType">To:</label>
-    <select name="toCurrencyType" id="toCurrencyType">
-    </select>
-    <button class="button" id="currencyRate">Convert Currency</button>
+      <label for="toCurrencyType">To:</label>
+      <select name="toCurrencyType" id="toCurrencyType">
+      </select>
+      <button class="button" id="currencyRate">Convert Currency</button>
 
-    <div class="show-currency"></div>
-    <div class="show-flag"></div>
-    <div class="show-errors"></div>
+      <div class="show-currency"></div>
+      <div class="show-flag"></div>
+      <div class="show-errors"></div>
+    </div>
   </div>
 </body>
 </html>
