--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   <title>Currency Exchange Rate</title>
 </head>
 <body>
-  <div class="jumbotron">
-    <div class="container">
+  <div class="container" id="flip-card">
+    <div class="flip-card-front">
       <h1>Get currency conversion rate!</h1>
       <label for="currencyAmount">Convert:</label>
       <input id="currencyAmount" type="number">
@@ -19,12 +19,15 @@
       <label for="toCurrencyType">To:</label>
       <select name="toCurrencyType" id="toCurrencyType">
       </select>
-      <button class="button" id="currencyRate">Convert Currency</button>
-
+      <button class="button" id="convert">Convert Currency</button>
+    </div>
+    <div class="flip-card-back">
       <div class="show-currency"></div>
       <div class="show-flag"></div>
       <div class="show-errors"></div>
+      <button class="button" id="back">Back!</button>
     </div>
   </div>
+
 </body>
 </html>
