--- a/src/index.html
+++ b/src/index.html
@@ -6,26 +6,30 @@
   <title>Currency Exchange Rate</title>
 </head>
 <body>
-  <div class="container" id="flip-card">
-    <div class="flip-card-front">
-      <h1>Get currency conversion rate!</h1>
-      <label for="currencyAmount">Convert:</label>
-      <input id="currencyAmount" type="number">
+  <div class="jumbotron">
+    <h1>Get currency conversion rate!</h1>
+  </div>
+  <div class="container">
+    <div id="flip-card">
+      <div class="flip-card-front">
+        <label for="currencyAmount">Convert:</label>
+        <input id="currencyAmount" type="number">
 
-      <label for="fromCurrencyType">From:</label>
-      <select name="fromCurrencyType" id="fromCurrencyType">
-      </select>
+        <label for="fromCurrencyType">From:</label>
+        <select name="fromCurrencyType" id="fromCurrencyType">
+        </select>
 
-      <label for="toCurrencyType">To:</label>
-      <select name="toCurrencyType" id="toCurrencyType">
-      </select>
-      <button class="button" id="convert">Convert Currency</button>
-    </div>
-    <div class="flip-card-back">
-      <div class="show-currency"></div>
-      <div class="show-flag"></div>
-      <div class="show-errors"></div>
-      <button class="button" id="back">Back!</button>
+        <label for="toCurrencyType">To:</label>
+        <select name="toCurrencyType" id="toCurrencyType">
+        </select>
+        <button class="button" id="convert">Convert Currency</button>
+      </div>
+      <div class="flip-card-back">
+        <div class="show-currency"></div>
+        <div class="show-flag"></div>
+        <div class="show-errors"></div>
+        <button class="button" id="back">Back!</button>
+      </div>
     </div>
   </div>
 
