--- a/src/index.html
+++ b/src/index.html
@@ -10,25 +10,25 @@
     <h1>Get currency conversion rate!</h1>
   </div>
   <div class="container">
-    <div id="flip-card">
-      <div class="flip-card-front">
+    <div class="jumbotron">
+      <div class="form-group">
         <label for="currencyAmount">Convert:</label>
         <input id="currencyAmount" type="number">
-
-        <label for="fromCurrencyType">From:</label>
-        <select name="fromCurrencyType" id="fromCurrencyType">
-        </select>
-
-        <label for="toCurrencyType">To:</label>
-        <select name="toCurrencyType" id="toCurrencyType">
-        </select>
-        <button class="button" id="convert">Convert Currency</button>
       </div>
-      <div class="flip-card-back">
-        <div class="show-currency"></div>
-        <div class="show-flag"></div>
-        <div class="show-errors"></div>
-        <button class="button" id="back">Back!</button>
+      <div class="form-group">
+        <label for="fromCurrencyType">From:</label>
+        <select name="fromCurrencyType" id="fromCurrencyType"></select>
+      </div>
+      <div class="form-group">
+        <label for="toCurrencyType">To:</label>
+        <select name="toCurrencyType" id="toCurrencyType"></select>
+      </div>
+
+      <div class="show-currency"></div>
+      <div class="show-flag"></div>
+      <div class="show-errors"></div>
+      <div class="fixed-bottom">
+        <button class="button" id="convert">Convert Currency</button>
       </div>
     </div>
   </div>
