add google font

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Currency Exchange Rate</title>
 </head>
 <body>
   <div class="jumbotron">
-    <h1>Get currency conversion rate!</h1>
+    <h1>CURRENCY CONVERTER</h1>
   </div>
   <div class="container">
     <div class="jumbotron">
@@ -27,7 +28,7 @@
       <div class="show-currency"></div>
       <div class="show-flag"></div>
       <div class="show-errors"></div>
-      <div class="fixed-bottom">
+      <div>
         <button class="button" id="convert">Convert Currency</button>
       </div>
     </div>
