--- a/src/index.html
+++ b/src/index.html
@@ -12,22 +12,24 @@
   </div>
   <div class="container">
     <div class="jumbotron">
-      <div class="form-group">
-        <label for="currencyAmount">Convert:</label>
-        <input id="currencyAmount" type="number">
+      <div class="form-fields">
+        <div class="form-group">
+          <label for="currencyAmount">Convert:</label>
+          <input id="currencyAmount" type="number">
+        </div>
+        <div class="form-group">
+          <label for="fromCurrencyType">From:</label>
+          <select name="fromCurrencyType" id="fromCurrencyType"></select>
+        </div>
+        <div class="form-group">
+          <label for="toCurrencyType">To:</label>
+          <select name="toCurrencyType" id="toCurrencyType"></select>
+        </div>
       </div>
-      <div class="form-group">
-        <label for="fromCurrencyType">From:</label>
-        <select name="fromCurrencyType" id="fromCurrencyType"></select>
-      </div>
-      <div class="form-group">
-        <label for="toCurrencyType">To:</label>
-        <select name="toCurrencyType" id="toCurrencyType"></select>
-      </div>
+      <button class="button" id="convert">Convert Currency</button>
       <div class="show-currency"></div>
       <div class="show-flag"></div>
       <div class="show-errors"></div>
-      <button class="button" id="convert">Convert Currency</button>
     </div>
   </div>
 </body>
