remove obsolete div

--- a/src/index.html
+++ b/src/index.html
@@ -18,17 +18,16 @@
           <input id="currencyAmount" type="number">
         </div>
         <div class="form-group">
-          <label for="fromCurrencyType">From:</label>
-          <select name="fromCurrencyType" id="fromCurrencyType"></select>
+          <label for="baseCurrency">From:</label>
+          <select name="baseCurrency" id="baseCurrency"></select>
         </div>
         <div class="form-group">
-          <label for="toCurrencyType">To:</label>
-          <select name="toCurrencyType" id="toCurrencyType"></select>
+          <label for="targetCurrency">To:</label>
+          <select name="targetCurrency" id="targetCurrency"></select>
         </div>
       </div>
       <button class="button" id="convert">Convert Currency</button>
       <div class="show-currency"></div>
-      <div class="show-flag"></div>
       <div class="show-errors"></div>
     </div>
   </div>
